@@ -6,6 +6,7 @@ The following people made especially gracious contributions of their
 time and energy in helping to track down bugs, add new features, and
 generally assist in the GRUB 2 maintainership process:
 
+Hollis Blanchard <hollis@penguinppc.org>
 NIIBE Yutaka <gniibe@m17n.org>
 Tsuneyoshi Yasuo <tuneyoshi@naic.co.jp>
 
